--- a/index.html
+++ b/index.html
@@ -4,9 +4,148 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Portafolio Marcelo Carte</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <title>Marcelo Carte</title>
   </head>
   <body>
-    <h1>Helloooooo</h1>
+    <!-- Navbar -->
+    <nav
+      class="navbar navbar-expand-lg bg-dark border-bottom border-body"
+      data-bs-theme="dark"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Marcelo Carte</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Acerca de mi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">¡Hablemos!</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- hero section -->
+
+    <!-- proyectos -->
+    <div class="misProyectos">
+      <h2 class="text-center m-1">Mis proyectos</h2>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+            <img
+              src="./assets/img/CV.png"
+              class="card-img-top"
+              alt="cv"
+              width="100%"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Simple CV</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum, ea.
+              </p>
+              <a
+                href="./assets/des/Desafio-01/index.html"
+                class="btn btn-primary"
+                >Ir</a
+              >
+            </div>
+          </div>
+          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+            <img
+              src="./assets/img/Desafio02.png"
+              class="card-img-top"
+              alt="cv"
+              width="100%"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Landing Page in CSS</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum, ea.
+              </p>
+              <a
+                href="./assets/des/Desafio-02/index.html"
+                class="btn btn-primary"
+                >Ir</a
+              >
+            </div>
+          </div>
+          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+            <img
+              src="./assets/img/iguanas.png"
+              class="card-img-top"
+              alt="cv"
+              width="100%"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Iguanas</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum, ea.
+              </p>
+              <a
+                href="./assets/des/Desafio-03/index.html"
+                class="btn btn-primary"
+                >Ir</a
+              >
+            </div>
+          </div>
+          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+            <img
+              src="./assets/img/cuppon.png"
+              class="card-img-top"
+              alt="cv"
+              width="100%"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Cuppon Page Bootstrap</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum, ea.
+              </p>
+              <a
+                href="./assets/des/Desafio-04/index.html"
+                class="btn btn-primary"
+                >Ir</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
