--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -17,7 +23,7 @@
     ></script>
     <title>Marcelo Carte</title>
   </head>
-  <body>
+  <body class="bg">
     <!-- Navbar -->
     <nav
       class="navbar navbar-expand-lg bg-dark border-bottom border-body"
@@ -48,7 +54,7 @@
               <a class="nav-link" href="#">Acerca de mi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Proyectos</a>
+              <a class="nav-link" href="">Proyectos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">¡Hablemos!</a>
@@ -58,13 +64,33 @@
       </div>
     </nav>
     <!-- hero section -->
-
+    <div class="container col-xxl-8 px-4 py-5 text-light heroSection">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img
+            class="d-block mx-lg-auto img-fluid"
+            src="./assets/img/cat01.png"
+            alt="cat"
+            width="700px"
+            loading="lazy"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bolder lh-1 mb3">Portafolio</h1>
+          <p class="lead fw-bold">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus,
+            deleniti! Ex enim illum, aliquam reprehenderit itaque neque eveniet
+            modi officiis.
+          </p>
+        </div>
+      </div>
+    </div>
     <!-- proyectos -->
     <div class="misProyectos">
-      <h2 class="text-center m-1">Mis proyectos</h2>
+      <h2 class="text-center text-light fw-bold m-5">Mis proyectos</h2>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
             <img
               src="./assets/img/CV.png"
               class="card-img-top"
@@ -77,14 +103,12 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
-              <a
-                href="./assets/des/Desafio-01/index.html"
-                class="btn btn-primary"
-                >Ir</a
+              <a href="./assets/des/Desafio-01/index.html" class="btn btn-info"
+                >Ver</a
               >
             </div>
           </div>
-          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
             <img
               src="./assets/img/Desafio02.png"
               class="card-img-top"
@@ -97,14 +121,12 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
-              <a
-                href="./assets/des/Desafio-02/index.html"
-                class="btn btn-primary"
-                >Ir</a
+              <a href="./assets/des/Desafio-02/index.html" class="btn btn-info"
+                >Ver</a
               >
             </div>
           </div>
-          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
             <img
               src="./assets/img/iguanas.png"
               class="card-img-top"
@@ -117,14 +139,12 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
-              <a
-                href="./assets/des/Desafio-03/index.html"
-                class="btn btn-primary"
-                >Ir</a
+              <a href="./assets/des/Desafio-03/index.html" class="btn btn-info"
+                >Ver</a
               >
             </div>
           </div>
-          <div class="card m-2 text-bg-dark p-3" style="width: 18rem">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
             <img
               src="./assets/img/cuppon.png"
               class="card-img-top"
@@ -137,15 +157,64 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
+              <a href="./assets/des/Desafio-04/index.html" class="btn btn-info"
+                >Ver</a
+              >
+            </div>
+          </div>
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
+            <img
+              src="./assets/img/Desafio05.png"
+              class="card-img-top"
+              alt="cv"
+              width="100%"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Desafio Github</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum, ea.
+              </p>
               <a
-                href="./assets/des/Desafio-04/index.html"
-                class="btn btn-primary"
-                >Ir</a
+                href="./assets/des/Desafio-05/fdsw-github/index.html"
+                class="btn btn-info"
+                >Ver</a
               >
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- forma -->
+    <div class="p-5 mx-5 text-white">
+      <form>
+        <legend class="text-center rl">Contacto</legend>
+        <div class="mb-3 mx-5">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Email address</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="mb-3 mx-5">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Example textarea</label
+          >
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-light">Enviar</button>
+        </div>
+      </form>
+    </div>
+    <footer></footer>
   </body>
 </html>
