--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <div class="col-lg-6">
           <h1 class="display-5 fw-bolder lh-1 mb3">Portafolio</h1>
           <p class="lead fw-bold">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus,
-            deleniti! Ex enim illum, aliquam reprehenderit itaque neque eveniet
-            modi officiis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            pariatur expedita est eius provident quibusdam doloremque? Mollitia
+            amet assumenda porro corrupti?
           </p>
         </div>
       </div>
