--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -26,11 +30,11 @@
   <body class="bg">
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg bg-dark border-bottom border-body"
+      class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top"
       data-bs-theme="dark"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Marcelo Carte</a>
+        <a class="navbar-brand ms-3" href="#">Marcelo Carte</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,7 +47,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-content-end"
+          class="collapse navbar-collapse justify-content-end me-3"
           id="navbarNav"
         >
           <ul class="navbar-nav">
@@ -51,33 +55,33 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de mi</a>
+              <a class="nav-link" href="#formacion">Acerca de mi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Proyectos</a>
+              <a class="nav-link" href="#misProyectos">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">¡Hablemos!</a>
+              <a class="nav-link" href="#forma">¡Hablemos!</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- hero section -->
-    <div class="container col-xxl-8 px-4 py-5 text-light heroSection">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="container text-light heroSection mt-5">
+      <div class="row flex-lg-row-reverse align-items-center py-5">
         <div class="col-10 col-sm-8 col-lg-6">
           <img
-            class="d-block mx-lg-auto img-fluid"
+            class="d-block mx-lg-auto img-fluid mb-3 rounded"
             src="./assets/img/cat01.png"
             alt="cat"
             width="700px"
-            loading="lazy"
+            loading="eager"
           />
         </div>
-        <div class="col-lg-6">
-          <h1 class="display-5 fw-bolder lh-1 mb3">Portafolio</h1>
-          <p class="lead fw-bold">
+        <div class="col-lg-6 text-sm-center">
+          <h1 class="display-5 fw-bolder lh-1 mb3">Mi Portafolio</h1>
+          <p class="lead">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
             pariatur expedita est eius provident quibusdam doloremque? Mollitia
             amet assumenda porro corrupti?
@@ -85,12 +89,66 @@
         </div>
       </div>
     </div>
+    <!-- formacion -->
+    <div id="formacion" class="bg-secondary mt-3 text-center">
+      <h1 class="fw-bold p-5 border-bottom border-info-subtle">Formación</h1>
+      <div class="container p-4">
+        <div class="row align-items-start">
+          <div class="col-lg-4">
+            <img
+              class="rounded-circle"
+              src="./assets/img/translation.jpg"
+              alt=""
+              width="150px"
+              height="150px"
+            />
+            <h2 class="fw-bold">Traducción Inglés-Español</h2>
+            <h4>Con mención en Negocios Internacionales</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
+              fugit quisquam sunt, repudiandae neque quaerat!
+            </p>
+          </div>
+          <div class="col-lg-4 p-3">
+            <img
+              class="rounded-circle"
+              src="./assets/img/bank.jpg"
+              alt=""
+              width="150px"
+              height="150px"
+            />
+            <h2 class="fw-bold">Ejecutivo Bancario</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
+              fugit quisquam sunt, repudiandae neque quaerat!
+            </p>
+          </div>
+          <div class="col-lg-4 p-3">
+            <img
+              class="rounded-circle"
+              src="./assets/img/dev.jpg"
+              alt=""
+              width="150px"
+              height="150px"
+            />
+            <h2 class="fw-bold">Full Stack Developer</h2>
+            <h4>DesafioLatam</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
+              fugit quisquam sunt, repudiandae neque quaerat!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- experiencia -->
+
     <!-- proyectos -->
-    <div class="misProyectos">
+    <div id="misProyectos">
       <h2 class="text-center text-light fw-bold m-5">Mis proyectos</h2>
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
+        <div class="row justify-content-evenly">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-2">
             <img
               src="./assets/img/CV.png"
               class="card-img-top"
@@ -103,12 +161,15 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
-              <a href="./assets/des/Desafio-01/index.html" class="btn btn-info"
+              <a
+                href="./assets/des/Desafio-01/index.html"
+                target="_blank"
+                class="btn btn-info"
                 >Ver</a
               >
             </div>
           </div>
-          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-2">
             <img
               src="./assets/img/Desafio02.png"
               class="card-img-top"
@@ -121,12 +182,15 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
-              <a href="./assets/des/Desafio-02/index.html" class="btn btn-info"
+              <a
+                href="./assets/des/Desafio-02/index.html"
+                target="_blank"
+                class="btn btn-info"
                 >Ver</a
               >
             </div>
           </div>
-          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-2">
             <img
               src="./assets/img/iguanas.png"
               class="card-img-top"
@@ -139,12 +203,15 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
-              <a href="./assets/des/Desafio-03/index.html" class="btn btn-info"
+              <a
+                href="./assets/des/Desafio-03/index.html"
+                target="_blank"
+                class="btn btn-info"
                 >Ver</a
               >
             </div>
           </div>
-          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-2">
             <img
               src="./assets/img/cuppon.png"
               class="card-img-top"
@@ -157,12 +224,15 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum, ea.
               </p>
-              <a href="./assets/des/Desafio-04/index.html" class="btn btn-info"
+              <a
+                href="./assets/des/Desafio-04/index.html"
+                target="_blank"
+                class="btn btn-info"
                 >Ver</a
               >
             </div>
           </div>
-          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-3">
+          <div class="card col-sm-12 col-lg-3 m-2 text-bg-dark p-2">
             <img
               src="./assets/img/Desafio05.png"
               class="card-img-top"
@@ -177,6 +247,7 @@
               </p>
               <a
                 href="./assets/des/Desafio-05/desafio_github/index.html"
+                target="_blank"
                 class="btn btn-info"
                 >Ver</a
               >
@@ -186,13 +257,11 @@
       </div>
     </div>
     <!-- forma -->
-    <div class="p-5 mx-5 text-white">
+    <div id="forma" class="p-5 mx-sm-auto mx-lg-5 text-light">
       <form>
         <legend class="text-center rl">Contacto</legend>
-        <div class="mb-3 mx-5">
-          <label for="exampleFormControlInput1" class="form-label"
-            >Email address</label
-          >
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email</label>
           <input
             type="email"
             class="form-control"
@@ -200,9 +269,9 @@
             placeholder="name@example.com"
           />
         </div>
-        <div class="mb-3 mx-5">
+        <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label"
-            >Example textarea</label
+            >Escríbenos</label
           >
           <textarea
             class="form-control"
@@ -215,6 +284,33 @@
         </div>
       </form>
     </div>
-    <footer></footer>
+    <footer class="text-center mb-3 p-5">
+      <h3 class="text-light my-3">Redes Sociales</h3>
+      <p class="text-light">@imafooter</p>
+      <div class="container">
+        <div class="row justify-content-center gid gap-3">
+          <a
+            href=""
+            class="col-1 link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover icon"
+            ><i class="bi bi-github"></i
+          ></a>
+          <a
+            href=""
+            class="col-1 link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover icon"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <a
+            href=""
+            class="col-1 link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover icon"
+            ><i class="bi bi-slack"></i
+          ></a>
+          <a
+            href=""
+            class="col-1 link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover icon"
+            ><i class="bi bi-twitter-x"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
