--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
   </head>
   <body class="bg">
     <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top"
-      data-bs-theme="dark"
-    >
+    <nav class="navbar navbar-expand-lg bg-dark fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand ms-3" href="#">Marcelo Carte</a>
+        <a class="navbar-brand ms-3" href="#">MCarte</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -90,7 +87,7 @@
       </div>
     </div>
     <!-- formacion -->
-    <div id="formacion" class="bg-secondary mt-3 text-center">
+    <div id="formacion" class="bg-secondary bg-gradient mt-3 text-center">
       <h1 class="fw-bold p-5 border-bottom border-info-subtle">Formación</h1>
       <div class="container p-4">
         <div class="row align-items-start">
@@ -102,8 +99,8 @@
               width="150px"
               height="150px"
             />
-            <h2 class="fw-bold">Traducción Inglés-Español</h2>
-            <h4>Con mención en Negocios Internacionales</h4>
+            <h2 class="fw-bold">Traductor Inglés-Español</h2>
+            <h4>UTC</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
               fugit quisquam sunt, repudiandae neque quaerat!
